--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 42 (259). Direct Realization'
 type: kramdown
 base: ../../../
-previous: SA1_22.html
+previous: SA1_41.html
 next: SA1_138.html
 ---
 
@@ -11,56 +11,62 @@ next: SA1_138.html
 ## [1. The Aggregates](index.html)
 ### 42 (259). Direct Realization
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Kalandaka’s Bamboo Park of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila was present on Mount Gṛdhrakūṭa.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila were on Mount Gṛdhrakūṭa.
 {:#p1}
 
-2\. In the afternoon, Mahākauṣṭhila got up from meditation and visited Śāriputra. They exchanged greetings and pleasantries, and then he sat to one side.
+2\. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.
 {:#p2}
 
-3\. Mahākauṣṭhila then said to Śāriputra, “Sir, I would like to ask a question. Would you have a moment to answer it?”
+3\. Mahākauṣṭhila then said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”
 {:#p3}
 
-Śāriputra said, “Sir, you may ask. I’ll answer with that I know.”
+Śāriputra said, “Sir, you may ask your question. I will answer with that I know.”
 
-4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to attain direct realization wishes to pursue it, what method does he use? What teaching does he contemplate?”
+
+4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to directly realize the Dharma wishes to pursue that direct realization, what method does he use to do that? What teaching does he contemplate?”
 {:#p4}
 
-Śāriputra replied, “If a monk who has yet to attain direct realization wants to pursue it, he diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”
-
-5\. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching should he contemplate?”
+5\. Śāriputra replied, “A monk who has yet to directly realize the Dharma and wants to pursue that realization diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”
 {:#p5}
 
-Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
-
-6\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching should he contemplate?”
+6\. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching will he contemplate?”
 {:#p6}
 
-Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”
-
-7\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of the arhat after realizing the fruit of non-returning. What teaching should he contemplate?”
+7\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
 {:#p7}
 
-Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the arhat after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the arhat.”
-
-8\. Mahākauṣṭhila also asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the arhat?”
+8\. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching will he contemplate?”
 {:#p8}
 
-Śāriputra replied, “Mahākauṣṭhila, an arhat also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what was yet to be attained, realized what was yet to be realized, and sees the teaching’s abode of happiness.”
-
-9\. When those two upright men each heard what was taught, they rejoiced and departed.
+9\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning will also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”
 {:#p9}
+
+10\. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning. What teaching will he contemplate?”
+{:#p10}
+
+11\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the <em>arhat</em>.”
+{:#p11}
+
+12\. Mahākauṣṭhila asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the <em>arhat</em>?”
+{:#p12}
+
+13\. Śāriputra replied, “Mahākauṣṭhila, an <em>arhat</em> also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what he had yet to attain, realized what he had yet to realize, and he lives happily in this life.”
+{:#p13}
+
+14\. When those two upright men each heard what was taught, they rejoiced and departed.
+{:#p14}
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.122](https://suttacentral.net/sn22.122){:target="_blank"}-[123](https://suttacentral.net/sn22.123){:target="_blank"} and EĀ 34.1. Note that the EĀ version matches the Pali in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn22.122/en/sujato" target="_blank">SN 22.122-123</a> and EĀ 34.1. The version in EĀ matches the Pali parallel in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 30 December 2023
 {: .revised}
 
 ---
