Corrected wrong location for SA 1.29.

--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -11,7 +11,7 @@ next: SA1_30.html
 ## [1. The Aggregates](index.html)
 ### 29 (23). Rāhula’s Question
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.
 {:#p1}
 
 2\. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side, and said, “Bhagavān, how do I know and how do I see this body of consciousness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self pride?”
