--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 2. The Sense Fields | 130 (235). Having a Teach
 type: kramdown
 base: ../../../
 previous: SA2_129.html
-next: ../03/index.html
+next: SA2_221.html
 ---
 
 # [The Related Discourses](../index.html)
